# learning_project

./: .gitignore  1  ANALYSIS_MANIFEST.txt  ANALYSIS_SUMMARY.md  Build.bat  CMakeLists.txt  LICENSE  PORTABILITY_IMPROVEMENTS.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.txt  README.md  README_ANALYSIS.md  Rebuild.bat  ReloadCMakeCache.bat  SharedDef.cmake  TODO.md  UpdateProject.bat  WINDOWS_PLATFORM_ANALYSIS.md  dmp_analysis.txt  imgui.ini  netImgui.cfg
.claude/: settings.local.json
Source/: CMakeLists.txt
Source/D3D12Tutorial_Init/: CMakeLists.txt  D3D12Tutorial_Init.cpp  D3DInit.cpp  D3DInit.h  GameTimer.cpp  GameTimer.h
Source/D3DHelloTriangle/: CMakeLists.txt  D3DHello.cpp  D3DHelloTriangle.cpp  D3DHelloTriangle.h
Source/D3DMath/: CMakeLists.txt  D3DMath.cpp
Source/D3DMathMatrix/: CMakeLists.txt  D3DMathMatrix.cpp  D3DMathMatrix.ptrace  TestPerf.ptrace
Source/D3DMathVector/: CMakeLists.txt  D3DMathVector.cpp
Source/D3DSimpleApp/: CMakeLists.txt  D3DSimpleApp.cpp
Source/DxApp/: CMakeLists.txt  DXSample.h
Source/DxImGuiWindowDemo/: CMakeLists.txt  DxImGuiWindowDemo.cpp  imgui.ini  main.cpp
Source/GLAdvanced/: CMakeLists.txt
Source/GLAdvanced/GLCubemapSkybox/: CMakeLists.txt
Source/GLAdvanced/GLDepthTesting/: main.cpp
Source/GLAdvanced/GLFrameBuffer/: CMakeLists.txt  GLFrameBuffer.cpp
Source/GLAdvanced/GLStencilTesting/: main.cpp
Source/GLBasic/: CMakeLists.txt  GLBasic.cpp  main.cpp
Source/GLCameraSystem/: CMakeLists.txt  main.cpp
Source/GLFreeglutDemo/: CMakeLists.txt  GLFreeglutDemo.cpp  main.cpp
Source/GLLight/: GLLight.cpp  main.cpp
Source/GLModels/: CMakeLists.txt  main.cpp
Source/GLMultilights/: CMakeLists.txt
Source/GLPrimitives/: CMakeLists.txt  main.cpp
Source/GLShaders/: CMakeLists.txt  main.cpp
Source/GLTemplate/: CMakeLists.txt  main.cpp
Source/GLTextures/: CMakeLists.txt  GLTextures.cpp  main.cpp
Source/GLTransform/: CMakeLists.txt  NXCube.cpp  NXCube.h  main.cpp
Source/GLUtilDemo/: CMakeLists.txt  GLUtilDemo.cpp  main.cpp
Source/GizmoDemo/: CMakeLists.txt  GizmoDemo.cpp
Source/GizmoExample/: CMakeLists.txt  main.cpp
Source/GlutWindowWithImGui/: CMakeLists.txt  main.cpp
Source/GooglePerfettoExample/: CMakeLists.txt  GooglePerfettoExample.cpp  example.pftrace  trace_categories.h
Source/ImGuiWithFreeglutDemo/: CMakeLists.txt  imgui.ini  main.cpp
Source/ImNodesDemo/: CMakeLists.txt  ImNodesDemo.cpp
Source/ImPlotDemo/: CMakeLists.txt  main.cpp
Source/LearningFoundation/: BlueprintNodeManager.cpp  BlueprintNodeManager.h  CMakeLists.txt  CommonDefines.cpp  CommonDefines.h  CommonDefines.h.in  DirectX12Window.cpp  DirectX12Window.h  DirectX12Windows.cpp  GLCamera.h  GLCubic.cpp  GLCubic.h  GLLight.h  GLMesh.cpp  GLMesh.h  GLModel.cpp  GLModel.h  GLObject.cpp  GLObject.h  GLScene.h  GlfwWindows.cpp  GlfwWindows.h  GlutWindow.cpp  GlutWindow.h  LearningCamera.cpp  LearningCamera.h  LearningFoundation.cpp  LearningFoundation.h  LearningShader.cpp  LearningShader.h  LearningStatics.cpp  LearningStatics.h  PhysicsManager.cpp  PhysicsManager.h  SceneManager.cpp  SceneManager.h  defines.h  glfw_window_helper.h  learning.h  thirdparty_header.h  (+1 more)
Source/LearningFoundation/DirectX/: DDSTextureLoader.cpp  DXSample.h  DirectX12Window.cpp  DirectX12Window.h  GameTimer.cpp  GameTimer.h  Win32Application.cpp  Win32Application.h  d3dApp.cpp  d3dApp.h  d3dUtil.cpp  d3dUtil.h  stdafx.h
Source/LearningFoundation/OpenGL/: GLCamera.h  GLCubic.cpp  GLDirectionLight.h  GLLightBase.h  GLModel.h  GLObject.cpp  GLObject.h  GLPointLight.h  GLQuad.cpp  GLQuad.h  GLScene.cpp  GLScene.h  GLSpotLight.h  GLTexture.h  GlfwWindows.cpp  GlfwWindows.h  GlutWindow.cpp  GlutWindow.h
Source/LearningFoundation/Physics/: PhysicsManager.cpp  PhysicsManager.h  SceneManager.cpp  SceneManager.h
Source/NodeApp/: CMakeLists.txt  NodeApp.cpp  imgui.ini
Source/NodeEditorDemo/: CMakeLists.txt  NodeEditorDemo.cpp  main.cpp
Source/PxLearningDemo/: CMakeLists.txt  PxLearningDemo.cpp  imgui.ini  main.cpp
Source/PxLearningDemo_CreateBox/: CMakeLists.txt  main.cpp
Source/PxSimpleDemo/: CMakeLists.txt  PxSimpleDemo.cpp  main.cpp
Source/RecastNaviDemo/: CMakeLists.txt  MainMenu.md  REFACTOR_PLAN.md  RecastNaviDemo.cpp  问题与解决记录.md
Source/RecastNaviDemo/App/: AppState.h
Source/RecastNaviDemo/Nav/: NavBuilder.cpp  NavBuilder.h  NavGeometry.cpp  NavGeometry.h  NavLinkGen.cpp  NavLinkGen.h  NavPathSmooth.cpp  NavPathSmooth.h  NavQuery.cpp  NavQuery.h  NavSerializer.cpp  NavSerializer.h  NavTypes.h  TileCacheSupport.h
Source/RecastNaviDemo/Phys/: PhysWorld.cpp  PhysWorld.h
Source/RecastNaviDemo/Render/: CollisionRender.h  DepthRaster.cpp  DepthRaster.h  GpuRenderer.cpp  GpuRenderer.h  GpuRendererD3D12.inl  NavViewTextureBridge.cpp  NavViewTextureBridge.h  PainterSort.cpp  PainterSort.h  Primitives.cpp  Primitives.h  RenderTypes.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h
Source/RecastNaviDemo/Shared/: MathUtils.h  Profiling.h
Source/RecastNaviDemo/UI/: FileDialog.cpp  FileDialog.h  Interaction.cpp  Interaction.h  MainLayout.cpp  MainLayout.h  Panels.cpp  Panels.h  Splitters.cpp  Splitters.h  StatsWindow.cpp  StatsWindow.h  UITypes.h
Source/Shared/: PerfettoTracingHelper.h
Source/TempTest/: CMakeLists.txt  main.cpp
Source/Templates/: CMakeLists.txt
Source/Templates/DxAppTemplate/: CMakeLists.txt  main.cpp
Source/Templates/GlfwAppTemplate/: CMakeLists.txt  main.cpp
Source/Templates/GlutAppTemplate/: CMakeLists.txt  GlutAppTemplate.cpp
Source/gl_advance_opengl/: CMakeLists.txt
Source/gl_advance_opengl/gl_cubemap_skybox/: CMakeLists.txt  imgui.ini
Source/gl_advance_opengl/gl_depth_testing/: CMakeLists.txt  imgui.ini  main.cpp
Source/gl_advance_opengl/gl_frame_buffer/: CMakeLists.txt  imgui.ini  main.cpp
Source/gl_basic/: CMakeLists.txt  main.cpp
Source/gl_game2d_breakout/: CMakeLists.txt  Texture2D.h  gl_game2d_breakout  main.cpp
Source/gl_light/: CMakeLists.txt  imgui.ini  main.cpp
Source/gl_model/: CMakeLists.txt  imgui.ini  main.cpp
Source/gl_multilights/: CMakeLists.txt  imgui.ini  main.cpp
(+299 files in other folders)
