cmake_minimum_required(VERSION 3.0...3.21)

### Required Foundation:
add_subdirectory(LearningFoundation)

### Optional Projects Below:
# add_subdirectory(GLModels)
# add_subdirectory(GLBasic)
# add_subdirectory(GLMultilights)
# add_subdirectory(GLAdvanced)
# add_subdirectory(PxSimpleDemo)
# add_subdirectory(GLCameraSystem)b
# add_subdirectory(GLPrimitives)
# add_subdirectory(GLTransform)
# add_subdirectory(GLShaders)
# add_subdirectory(GLLight)
# add_subdirectory(GLUtilDemo)
# add_subdirectory(GLFreeglutDemo)
 add_subdirectory(GlutWindowWithImGui)
# add_subdirectory(ImGuiWithFreeglutDemo)
 